<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context="com.example.androidchallenge5.ui.game.GameActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/splash_screen1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/btn_close"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:contentDescription="@string/refresh"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_game_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btn_refresh"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="21dp">

        <LinearLayout
            android:id="@+id/layout_player"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_player_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_neue_font_family"
                android:gravity="center"
                android:text="@string/pemain_1"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_input_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <RadioButton
                    android:id="@+id/rb_batu_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/batu_checkbox_background"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/rb_kertas_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/kertas_checkbox_background"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/rb_gunting_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/gunting_checkbox_background"
                    android:button="@null" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:rotation="-10">

            <TextView
                android:id="@+id/tv_versus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_neue_font_family"
                android:gravity="center"
                android:text="@string/vs"
                android:textColor="@color/red"
                android:textSize="@dimen/_44ssp"
                android:textStyle="bold"
                android:visibility="visible" />


            <TextView
                android:id="@+id/tv_player_win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:fontFamily="@font/comic_neue_font_family"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/pemain_1_menang"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_computer_win"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:fontFamily="@font/comic_neue_font_family"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/pemain_2_menang"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_draw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue"
                android:fontFamily="@font/comic_neue_font_family"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:text="@string/draw"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_computer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_player_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_neue_font_family"
                android:gravity="center"
                android:text="@string/com"
                android:textColor="@color/blue"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_input_player_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_8sdp">

                <RadioButton
                    android:id="@+id/rb_batu_player_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/batu_checkbox_background"
                    android:button="@null"
                    android:clickable="false" />

                <RadioButton
                    android:id="@+id/rb_kertas_player_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/kertas_checkbox_background"
                    android:button="@null"
                    android:clickable="false" />

                <RadioButton
                    android:id="@+id/rb_gunting_player_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:background="@drawable/gunting_checkbox_background"
                    android:button="@null"
                    android:clickable="false" />

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_input_log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_content_rounded"
        android:backgroundTint="@color/lightGray"
        android:fontFamily="@font/comic_neue_font_family"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_game_content"
        tools:text="Pemain 1 Memilih Batu" />

    <ImageView
        android:id="@+id/btn_refresh"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:contentDescription="@string/refresh"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>