<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_choose_your_opponent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_font_family"
        android:gravity="center"
        android:text="@string/pilih_lawanmu"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="21dp" />

    <LinearLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="21dp">

        <LinearLayout
            android:id="@+id/layout_player_vs_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_110sdp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/landing_page1" />

            <TextView
                android:id="@+id/tv_player_vs_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_neue_font_family"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                tools:text="Player vs Pemain" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_player_vs_com"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_110sdp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/landing_page2" />

            <TextView
                android:id="@+id/tv_player_vs_com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comic_neue_font_family"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                tools:text="Player vs Computer" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_content_rounded"
        android:backgroundTint="@color/grey"
        android:padding="@dimen/_6sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tv_welcome_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/comic_neue_font_family"
            android:textColor="?colorOnPrimary"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_close_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Selamat Datang Player" />

        <TextView
            android:id="@+id/btn_close_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comic_neue_font_family"
            android:text="@string/tutup"
            android:textColor="@color/orange"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_start_learning"
        android:layout_width="196dp"
        android:layout_height="55dp"
        android:background="@drawable/button_primary"
        android:text="@string/Panduan_Game"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="549dp" />

</androidx.constraintlayout.widget.ConstraintLayout>